--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -136,6 +136,14 @@
   url = {http://CRAN.R-project.org/package=glmnet}
 }
 
+@MANUAL{c060,
+  title = {\pkg{c060}: Extended Inference for Lasso and Elastic-Net Regularized Cox and Generalized Linear Models},
+  author = {Martin Sill and Thomas Hielscher and Natalia Becker and Manuela Zucknick},
+  year = {2013},
+  note = {\proglang{R}~package version~0.2},
+  url = {http://CRAN.R-project.org/package=c060}
+}
+
 @ARTICLE{FHT2010,
   author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
   title = {Regularization Paths for Generalized Linear Models via Coordinate
